# exam-paper-synthesis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Makefile  QUESTIONS.md  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e.yml  pages.yml
api/: pyproject.toml
api/app/: __init__.py  export.py  main.py  models.py  ops.py  routes_edit.py  routes_export.py  routes_generate.py
cli/: pyproject.toml
cli/mathgen/: __init__.py  __main__.py  _pdf.py  commands.py
cli/tests/: test_cli_edit.py  test_cli_export.py  test_cli_generate.py
content/blueprints/: fractions_easy.yaml  percentage_hard.yaml  percentage_medium.yaml  ratio_easy.yaml  ratio_medium.yaml  speed_easy.yaml  speed_hard.yaml  speed_medium.yaml
content/syllabus/: percentage.yaml
docs/: CONTEXT.md  DIFFICULTY.md  PRD.md  README.md  REQS.md  ROADMAP.md  SCHEMA.md  SHAPING.md  SLICES.md  V1-plan.md
docs/adr/: 0001-access-and-deployment-model.md  0002-deterministic-first-generation.md  0003-blueprint-representation.md  0004-canonical-question-object.md  0005-answer-key-and-marking.md  0006-tech-stack-and-layout.md  0007-diagram-policy.md  0008-export-pdf-engine.md  0009-difficulty-and-edit-semantics.md  0010-review-and-export-gate.md  0011-external-material-ingestion.md  0012-diagram-representation.md  0013-question-structure-and-answer-typing.md  0014-schema-formalization.md  0015-difficulty-model.md  0016-tech-stack-specifics.md
docs/background/: QUESTIONS.md  REQS.md
docs/planning/editor/: README.md
docs/planning/mvp/: PRD.md  SHAPING.md  SLICES.md  V1-plan.md  V2-plan.md  V3-plan.md  V4-plan.md  V5-plan.md  V6-plan.md  V6b-geometry-plan.md  V7-plan.md
docs/planning/mvp/background/: QUESTIONS.md  REQS.md  chatgpt-conversation-summary.md
docs/shaping/: KAN-310-plan.md  SHAPING.md  SLICES.md  V1-plan.md  V2-plan.md  V3-plan.md  V4-plan.md  V5-plan.md  V6-plan.md  V6b-geometry-plan.md  V7-plan.md  diagram-roadmap.md
docs/syllabus/: README.md
engine/: pyproject.toml
engine/exam_engine/: __init__.py  canonical.py  diagram.py  edits.py  errors.py  ladder.py  pipeline.py  render.py  schema.py
engine/exam_engine/assets/: print.css
engine/exam_engine/blueprints/: __init__.py  base.py  registry.py
engine/exam_engine/blueprints/solvers/: __init__.py  fractions_easy.py  fractions_hard.py  fractions_medium.py  geometry_angle_easy.py  geometry_angle_hard.py  geometry_angle_medium.py  geometry_area_common.py  geometry_area_easy.py  geometry_area_hard.py  geometry_area_medium.py  percentage_easy.py  percentage_hard.py  percentage_medium.py  ratio_easy.py  ratio_hard.py  ratio_medium.py  speed_easy.py  speed_hard.py  speed_medium.py
engine/exam_engine/content/blueprints/: fractions_hard.yaml  fractions_medium.yaml  geometry_angle_easy.yaml  geometry_angle_hard.yaml  geometry_angle_medium.yaml  geometry_area_easy.yaml  geometry_area_hard.yaml  geometry_area_medium.yaml  percentage_easy.yaml  ratio_hard.yaml  ratio_medium.yaml
engine/exam_engine/content/syllabus/: fractions.yaml  ratio.yaml  speed.yaml
engine/exam_engine/schemas/: canonical-question.schema.json
schemas/: canonical-question.schema.json
site/: README.md  index.html
tests/: conftest.py  invariants.py  strategies.py  test_api_edit.py  test_api_generate.py  test_diagram_bar_model.py  test_diagram_before_after.py  test_diagram_shaded_fraction.py  test_edits.py  test_export_api.py  test_generate_fractions_easy.py  test_generate_fractions_hard.py  test_generate_fractions_medium.py  test_generate_geometry_angle_easy.py  test_generate_geometry_angle_hard.py  test_generate_geometry_angle_medium.py  test_generate_geometry_area_easy.py  test_generate_geometry_area_hard.py  test_generate_geometry_area_medium.py  test_generate_percentage_easy.py  test_generate_percentage_hard.py  test_generate_percentage_medium.py  test_generate_ratio_easy.py  test_generate_ratio_hard.py  test_generate_ratio_medium.py  test_generate_speed_easy.py  test_generate_speed_hard.py  test_generate_speed_medium.py  test_geometry_figure.py  test_invariants_fractions.py  test_invariants_geometry_angle.py  test_invariants_geometry_area.py  test_invariants_percentage.py  test_invariants_ratio.py  test_invariants_speed.py  test_ladder.py  test_pipeline_retry.py  test_render.py  test_schema_validation.py  test_sourced_interchange.py
tests/e2e/: export.spec.js  generate.spec.js  geometry.spec.js  worksheet.spec.js
tests/fixtures/sourced/: psle_2023_ratio.json
tests/golden/: fractions_easy.jsonl  fractions_hard.jsonl  fractions_medium.jsonl  geometry_angle_easy.jsonl  geometry_angle_hard.jsonl  geometry_angle_medium.jsonl  geometry_area_easy.jsonl  geometry_area_hard.jsonl  geometry_area_medium.jsonl  percentage_easy.jsonl  percentage_hard.jsonl  percentage_medium.jsonl  ratio_easy.jsonl  ratio_hard.jsonl  ratio_medium.jsonl  speed_easy.jsonl  speed_hard.jsonl  speed_medium.jsonl
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
web/src/: App.svelte  App.test.ts  app.css  main.js  main.ts  setupTests.ts
web/src/lib/: QuestionCard.svelte  QuestionCard.test.ts  WorksheetTray.svelte  WorksheetTray.test.ts  api.js  api.test.ts  api.ts  barModel.js  barModel.test.ts  barModel.ts  topics.ts  types.ts  worksheet.test.ts  worksheet.ts
