[project]
name = "exam-paper-synthesis"
version = "0.0.0"
description = "Deterministic, blueprint-driven Singapore P5-P6 math question engine (workspace root)."
requires-python = ">=3.12"
dependencies = ["exam-engine", "exam-api"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["engine", "api"]

[tool.uv.sources]
exam-engine = { workspace = true }
exam-api = { workspace = true }

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
