[project]
name = "exam-paper-synthesis"
version = "0.0.0"
description = "Deterministic, blueprint-driven Singapore P5-P6 math question engine (workspace root)."
requires-python = ">=3.12"
dependencies = ["exam-engine", "exam-api", "mathgen"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["engine", "api", "cli"]

[tool.uv.sources]
exam-engine = { workspace = true }
exam-api = { workspace = true }
mathgen = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=2.3.0",
    "types-PyYAML>=6",
]

[tool.pytest.ini_options]
testpaths = ["tests", "cli/tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
files = ["engine/exam_engine", "api/app", "cli/mathgen"]
mypy_path = ["engine", "api", "cli"]
warn_unused_ignores = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

# jsonschema ships no type stubs; PyYAML is covered by types-PyYAML (dev dep).
[[tool.mypy.overrides]]
module = ["jsonschema"]
ignore_missing_imports = true
