[project]
name = "exam-api"
version = "0.1.0"
description = "Thin FastAPI HTTP layer over the engine (ADR-0006)."
requires-python = ">=3.12"
dependencies = [
    "exam-engine",
    "fastapi>=0.139.2",
    "uvicorn>=0.29",
    "pydantic>=2",
    "playwright>=1.44",
]

[tool.uv.sources]
exam-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
