[project]
name = "mathgen"
version = "0.1.0"
description = "Headless CLI driving the exam engine directly — generate/edit/export (KAN-152, V7)."
requires-python = ">=3.12"
dependencies = [
    "exam-engine",
    "playwright>=1.44",
]

[project.scripts]
mathgen = "mathgen.__main__:main"

[tool.uv.sources]
exam-engine = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mathgen"]
