[project]
name = "exam-engine"
version = "0.1.0"
description = "The product: canonical model, blueprint/solver framework, generation pipeline, validators."
requires-python = ">=3.12"
# Engine is UI/HTTP-agnostic: no FastAPI/Pydantic here (ADR-0016).
dependencies = ["jsonschema>=4.21", "pyyaml>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exam_engine"]
