[project]
name = "exam-engine"
version = "0.1.0"
description = "The product: canonical model, blueprint/solver framework, generation pipeline, validators."
requires-python = ">=3.12"
# Engine is UI/HTTP-agnostic: no FastAPI/Pydantic here (ADR-0016).
dependencies = ["jsonschema>=4.21", "pyyaml>=6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exam_engine"]

# Non-Python package data that MUST ship inside the wheel because the engine
# resolves it via a package-relative ``__file__`` path at runtime:
#   - ``assets/**``   — vendored KaTeX + print.css read by render.py (KAN-206).
#   - ``content/**``  — blueprint + syllabus YAML read by the content loader.
#   - ``schemas/**``  — the canonical JSON Schema read by the schema loader.
# The content + schema files were moved under the package in KAN-258 so that
# ``generate()`` works from a wheel install (they previously lived at the repo
# root, outside the package, and were absent from the built wheel). Hatchling's
# default discovery already includes them (they live inside the package and are
# not VCS-ignored); listing them as build artifacts makes the requirement
# explicit and guards against them ever being dropped.
artifacts = [
    "exam_engine/assets/**/*",
    "exam_engine/content/**/*",
    "exam_engine/schemas/**/*",
]
